--- a/Vale/Perro/Huesos/1/básico/index.html
+++ b/Vale/Perro/Huesos/1/básico/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Huesos del Perro - Preparatorio</title>
+<title>Osteología Canina- Preparatorio</title>
 
 <style>
 body{
@@ -122,7 +122,7 @@ h2{color:#00ffff;text-align:center}
 
   <!-- IZQUIERDA -->
   <div>
-    <h2>Huesos del Perro</h2>
+    <h2>Osteología canina</h2>
 
     <div class="niveles">
       <button id="b0" class="activo" onclick="verNivel(0)">Cabeza</button>
