Update image heading from 'Huesos del Perro' to 'Osteología canina'

--- a/Vale/Perro/Huesos/2/index.html
+++ b/Vale/Perro/Huesos/2/index.html
@@ -147,7 +147,7 @@ button{
 
   <!-- IMAGEN -->
   <div class="img-box">
-    <h3 style="color:#00ffff">Imagen – Huesos del Perro</h3>
+    <h3 style="color:#00ffff">Imagen – Osteología canina</h3>
     <img src="imagen.jpg">
   </div>
 
