--- a/Vale/Gato/Huesos/1/index.html
+++ b/Vale/Gato/Huesos/1/index.html
@@ -1,1 +1,222 @@
+<!DOCTYPE html> 
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<title>Osteología Felina - Preparatorio</title>
+
+<style>
+body{
+  margin:0;
+  font-family:Arial;
+  background:url("selva.jpg") no-repeat center center fixed;
+  background-size:cover;
+  color:#fff;
+}
+
+.panel{
+  max-width:1200px;
+  margin:40px auto;
+  background:rgba(20,20,20,0.82);
+  border-radius:16px;
+  padding:24px;
+  box-shadow:0 0 20px #000;
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  gap:20px;
+}
+
+h2{color:#00ffff;text-align:center}
+
+/* ===== BOTONES NIVEL ===== */
+.niveles{
+  text-align:center;
+  margin-bottom:25px;
+}
+
+.niveles button{
+  margin:6px;
+  padding:10px 18px;
+  border:none;
+  border-radius:10px;
+  background:#2f8f2f;
+  color:#fff;
+  font-weight:bold;
+  cursor:pointer;
+}
+
+.niveles .activo{
+  background:#46c646;
+}
+
+/* ===== BOTONES ===== */
+.lista button{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  width:65%;
+  margin:8px auto;
+  padding:8px 12px;
+  border:none;
+  border-radius:8px;
+  background:#143a5b;
+  color:#fff;
+  font-weight:bold;
+  cursor:pointer;
+  text-align:left;
+}
+
+.lista button::after{
+  content:"👆";
+}
+
+/* ===== IMAGEN ===== */
+.img-box{
+  text-align:center;
+}
+
+.img-box img{
+  max-width:100%;
+  border-radius:12px;
+  box-shadow:0 0 15px #000;
+}
+
+.btn-juego{
+  margin-top:12px;
+  padding:12px 26px;
+  font-size:1.1rem;
+  border:none;
+  border-radius:10px;
+  background:#46c646;
+  color:#000;
+  font-weight:bold;
+  cursor:pointer;
+}
+
+/* ===== POPUP ===== */
+#popup{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.7);
+  display:none;
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
+}
+
+#popup-box{
+  background:#222;
+  padding:20px;
+  border-radius:14px;
+  max-width:420px;
+  text-align:center;
+}
+
+#popup-box h3{color:#00ffff}
+</style>
+</head>
+
+<body>
+
+<div class="panel">
+
+  <!-- IZQUIERDA -->
+  <div>
+    <h2>Osteología felina</h2>
+
+    <div class="niveles">
+      <button id="b0" class="activo" onclick="verNivel(0)">Cabeza</button>
+      <button id="b1" onclick="verNivel(1)">Tronco</button>
+      <button id="b2" onclick="verNivel(2)">Extremidades</button>
+    </div>
+
+    <div class="lista" id="lista"></div>
+  </div>
+
+  <!-- DERECHA -->
+  <div class="img-box">
+    <img src="imagen.jpg">
+    <br>
+    <a href="#">
+      <button class="btn-juego">▶ EMPEZAR JUEGO</button>
+    </a>
+  </div>
+
+</div>
+
+<!-- ===== POPUP ===== -->
+<div id="popup">
+  <div id="popup-box">
+    <h3 id="popTitulo"></h3>
+    <p id="popTexto"></p>
+    <button onclick="cerrarPop()">Cerrar</button>
+  </div>
+</div>
+
+<script>
+const niveles = [
+
+/* CABEZA */
+[
+{n:1, t:"VÉRTEBRAS CERVICALES", d:"Sostienen la cabeza y permiten el movimiento del cuello."},
+{n:7, t:"ESCÁPULA", d:"Une la extremidad anterior con el tronco."}
+],
+
+/* TRONCO */
+[
+{n:2, t:"VÉRTEBRAS TORÁCICAS", d:"Forman el tórax junto a las costillas."},
+{n:3, t:"VÉRTEBRAS LUMBARES", d:"Soportan peso corporal."},
+{n:4, t:"VÉRTEBRAS CAUDALES", d:"Forman la cola."},
+{n:5, t:"COSTILLA 10", d:"Protege órganos torácicos."},
+{n:"5'", t:"ARCO COSTAL", d:"Une las costillas inferiores."},
+{n:6, t:"ESTERNÓN", d:"Protege corazón y pulmones."}
+],
+
+/* EXTREMIDADES */
+[
+{n:8, t:"HÚMERO", d:"Hueso del brazo anterior."},
+{n:9, t:"RADIO", d:"Hueso principal del antebrazo."},
+{n:10, t:"CÚBITO", d:"Hueso lateral del antebrazo."},
+{n:11, t:"HUESOS DEL CARPO", d:"Forman la muñeca."},
+{n:12, t:"HUESOS METACARPIANOS", d:"Forman la mano."},
+{n:13, t:"FALANGES", d:"Dedos."},
+{n:14, t:"COXAL", d:"Hueso de la cadera."},
+{n:15, t:"FÉMUR", d:"Hueso del muslo."},
+{n:16, t:"TIBIA", d:"Soporta el peso posterior."},
+{n:17, t:"PERONÉ", d:"Hueso lateral de la pierna."},
+{n:18, t:"HUESOS DEL TARSO", d:"Forman el tobillo."},
+{n:19, t:"HUESOS METATARSIANOS", d:"Pie posterior."}
+]
+
+];
+
+function verNivel(n){
+  document.querySelectorAll(".niveles button").forEach(b=>b.classList.remove("activo"));
+  document.getElementById("b"+n).classList.add("activo");
+
+  const lista=document.getElementById("lista");
+  lista.innerHTML="";
+
+  niveles[n].forEach(h=>{
+    const btn=document.createElement("button");
+    btn.textContent=h.n+". "+h.t;
+    btn.onclick=()=>verPop(h.n+". "+h.t,h.d);
+    lista.appendChild(btn);
+  });
+}
+
+function verPop(t,p){
+  document.getElementById("popTitulo").textContent=t;
+  document.getElementById("popTexto").textContent=p;
+  document.getElementById("popup").style.display="flex";
+}
+
+function cerrarPop(){
+  document.getElementById("popup").style.display="none";
+}
+
+verNivel(0);
+</script>
+
+</body>
+</html>
 
