--- a/Vale/Glosario/index.html
+++ b/Vale/Glosario/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Juego de Tarjetas - Glosario Veterinario</title>
+<title>Glosario </title>
 <style>
 body{
   margin:0;
