Update title in veterinary glossary page

--- a/Vale/Glosario/index.html
+++ b/Vale/Glosario/index.html
@@ -175,7 +175,7 @@ footer span strong{
 </svg>
 
 <div class="contenedor">
-  <h1>Juego de Tarjetas - Glosario Veterinario</h1>
+  <h1>Glosario </h1>
   <p>Haz clic en la tarjeta para ver la definición</p>
 
   <div class="select-categoria">
