--- a/Vale/Disciplinas/index.html
+++ b/Vale/Disciplinas/index.html
@@ -195,6 +195,13 @@ h2{
   </div>
 </div>
 
+  <footer>
+  <div class="footer-inner">
+    <svg class="logo-pet"><use href="#logo-pata"></use></svg>
+    <span>Aprendiendo con <strong>Michy y Kiara</strong></span>
+    <svg class="logo-pet"><use href="#logo-pata"></use></svg>
+  </div>
+</footer>
 <script>
 function ver(t,d){
   document.getElementById("pt").textContent=t;
