--- a/Vale/Gato/Huesos/1/index.html
+++ b/Vale/Gato/Huesos/1/index.html
@@ -112,10 +112,52 @@ h2{color:#00ffff;text-align:center}
 }
 
 #popup-box h3{color:#00ffff}
+
+/* ===== FOOTER ===== */
+footer{
+  margin:0 auto 18px;
+  text-align:center;
+  font-size:.85rem;
+  color:#e5e7eb;
+  opacity:.95;
+}
+
+.footer-inner{
+  display:inline-flex;
+  align-items:center;
+  gap:8px;
+  padding:6px 14px;
+  border-radius:999px;
+  background:rgba(15,23,42,0.85);
+  box-shadow:0 0 8px rgba(0,0,0,0.6);
+}
+
+footer span strong{
+  color:#00ffff;
+}
+
+.logo-pet{
+  width:22px;
+  height:22px;
+  color:#facc15;
+}
 </style>
 </head>
 
 <body>
+
+<!-- SPRITE SVG HUELLITA -->
+<svg aria-hidden="true" style="position:absolute;width:0;height:0;overflow:hidden">
+  <defs>
+    <symbol id="logo-pata" viewBox="0 0 24 24">
+      <path d="M9 15c0-1.7 1.3-3 3-3s3 1.3 3 3-1.2 3.2-3 3.5c-1.8-.3-3-1.8-3-3.5z" fill="currentColor"/>
+      <circle cx="7.2" cy="10" r="1.6" fill="currentColor"/>
+      <circle cx="10.5" cy="8.5" r="1.7" fill="currentColor"/>
+      <circle cx="13.5" cy="8.5" r="1.7" fill="currentColor"/>
+      <circle cx="16.8" cy="10" r="1.6" fill="currentColor"/>
+    </symbol>
+  </defs>
+</svg>
 
 <div class="panel">
 
@@ -151,6 +193,15 @@ h2{color:#00ffff;text-align:center}
     <button onclick="cerrarPop()">Cerrar</button>
   </div>
 </div>
+
+<!-- ===== FOOTER CON LOGOS ===== -->
+<footer>
+  <div class="footer-inner">
+    <svg class="logo-pet"><use href="#logo-pata"></use></svg>
+    <span>Aprendiendo con <strong>Michy y Kiara</strong></span>
+    <svg class="logo-pet"><use href="#logo-pata"></use></svg>
+  </div>
+</footer>
 
 <script>
 const niveles = [
@@ -219,4 +270,3 @@ verNivel(0);
 
 </body>
 </html>
-
